<resources>
    <string name="app_name">食品快速检测仪</string>

    <string name="action_info">Info</string>
    <string name="action_settings">设置</string>
    <string name="action_scan">扫描</string>
    <string name="action_add">添加</string>
    <string name="action_save">保存</string>

    <string name="search_hint">搜索</string>
    <!-- Removed - title_activity_info no longer used (InformationViewActivity deleted) -->
    <!-- Removed - info_title_array, info_body_array, info_url_array no longer used (InformationViewActivity deleted) -->

    <string name="title_activity_settings">设置</string>

     <string name="temperature">温度</string>
     <string name="lamptime">总灯泡使用时间</string>
     <string name="spatial_freq">Spatial Freq</string>
     <string name="set_nano">我的设备</string>
     <string name="clear_nano">删除我的设备</string>
     <string name="go">连接</string>
     <string name="forget">忘记</string>
     <string name="device_filter">设备</string>

     <string name="title_activity_graph">图表</string>

     <string name="reflectance">反射率</string>
     <string name="intensity">强度</string>
     <string name="absorbance">吸收率</string>
     <!-- Removed - reference_tab no longer used (ViewPager tabs removed) -->

     <!-- Removed - graph_tab_index no longer used (ViewPager tabs removed) -->
     <!-- <string-array name="graph_tab_index">
         <item>Reflectance</item>
         <item>Absorbance</item>
         <item>Intensity</item>
         <item>Reference</item>
     </string-array> -->

     <string name="aspirin">阿司匹林</string>
     <string name="bc">bc</string>
     <string name="bellpepper">甜椒</string>
     <string name="coconutoil">椰子油</string>
     <string name="coffee">咖啡</string>
     <string name="corn_starch">玉米淀粉</string>
     <string name="eucerin_lotion">eucerin_lotion</string>
     <string name="flour">面粉</string>
     <string name="glucose">葡萄糖</string>
     <string name="out_of_spec_aspirin">不符合规格的阿司匹林</string>

     <string name="delete">删除</string>
     <string name="ok">OK</string>
     <string name="not_connected_title">未连接</string>
     <string name="not_connected_message">确保你的安卓设备和你的Nano已开启蓝牙，然后点击主界面上的“扫描”按钮。.</string>
     <string name="yes_i_know">我已知晓</string>

     <string name="battery">电池</string>
     <string name="humidity">湿度</string>
     <string name="device_status">设备状态</string>
     <string name="error_status">错误状态</string>
     <string name="temp_threshold">温度阈值</string>
     <string name="deg_c">deg C</string>
     <string name="deg_f">deg F</string>
     <string name="humid_threshold">湿度阈值</string>
     <string name="relative_humid">% RH</string>
     <string name="not_supported">不支持</string>
    <string name="click">点击</string>
    <string name="clear_error">Clear 错误</string>
    <string name="detail_device_status">详细设备状态</string>
    <string name="detail_error_status">Detailed 错误状态</string>
    <string name="detail_scan_error_status">Detailed Scan 错误状态</string>
    <string name="detail_adc_error_status">Detailed ADC 错误状态</string>
    <string name="detail_hw_error_status">Detailed Hardware 错误状态</string>
    <string name="detail_tmp006_error_status">Detailed TMP006 错误状态</string>
    <string name="detail_hdc1000_error_status">Detailed HDC1000 错误状态</string>
    <string name="detail_battery_error_status">Detailed Battery 错误状态</string>
    <string name="detail_system_error_status">Detailed System 错误状态</string>

     <string name="version">v%1$s (%2$d)</string>

     <string-array name="configure_options">
         <item>Device Information</item>
         <item>Device Status</item>
         <item>Scan Configurations</item>
     </string-array>

     <string name="range_start_value">%1$d nm</string>
     <string name="range_end_value">%1$d nm</string>
     <string name="width_value">%1$d nm</string>
     <string name="patterns_value">%1$d</string>
     <string name="repeats_value">%1$d</string>

     <string name="manufacturer">制造商</string>
     <string name="scan_Type">扫描类型</string>
     <string name="range_start">光谱范围起点</string>
     <string name="range_end">光谱范围终点</string>
     <string name="width">宽度</string>
     <string name="number_patterns">模式数量</string>
     <string name="number_repeats">重复次数</string>
     <string name="serial_sn">Nano SN</string>

     <string name="scan">扫描</string>
     <string name="prefix">文件名前缀</string>
     <string name="data">数据</string>
     <string name="nano">Nano</string>
     <string name="save_to_sd">存到内存卡?</string>
     <string name="save_to_android">存至设备?</string>
     <string name="cont_scan">连续扫描?</string>
     <string name="scan_conf">扫描配置</string>
     <string name="col_1">Column 1</string>
     <string name="hadamard">Hadamard</string>
     <string name="cont_scan_stop">停止连续扫描</string>

     <string name="model">型号</string>
     <string name="serial">序列号</string>
     <string name="hw_rev">硬件版本</string>
     <string name="tiva_rev">Tiva版本</string>
     <string name="spectrum_rev">光谱版本</string>

     <string name="batt_level_value">%1$d%%</string>
     <string name="temp_value_c">%1$s&#x2103;</string>
     <string name="temp_value_f">%1$s&#x2109;</string>
     <string name="humid_value">%1$s%% RH</string>

     <string name="stored_configurations">保存的配置</string>
     <string name="reading_configurations">读取扫描配置中…</string>
     <string name="stored_scan_data">存储扫描数据</string>
     <string name="reading_sd_card">读取SD卡…</string>
     <string name="adding_configurations">添加配置</string>
    <string name="scan_configurations">扫描配置</string>

     <string name="time_format_at">\'at\'</string>
     <string name="new_scan">New Scan</string>
     <string name="newScan">NewScan</string>
     <string name="nano_disconnected">"Nano Disconnected!"</string>
     <string name="configure">配置</string>
     <string name="device_information">设备信息</string>
     <string name="file_not_found">找不到该文件!</string>

     <string name="emailing">"正在发送邮件 "</string>
     <string name="send_mail">"发送邮件…"</string>
     <string name="no_email_clients">没有发信客户端.</string>
     <string name="update_thresholds">更新阈值</string>
     <string name="scanning">扫描中…</string>

     <string name="dl_ref_cal">正在下载参考校准数据</string>
     <string name="dl_cal_matrix">正在下载校准矩阵</string>
     <string name="select_nano">选择设备</string>
     <string name="nano_confirmation_title">确定?</string>
     <string name="nano_confirmation_msg">你确定要为具有该 MAC 地址的 Nano 进行设置吗？: %1$s, 作为你的主要设备?</string>
     <string name="nano_forget_msg">你确定要删除该作为你主要设备的MAC地址的Nano吗: %1$s?</string>
     <string name="cancel">Cancel</string>
     <string name="no_sd_scans">SD 卡上没有存储扫描件！</string>

     <string name="desc_icon">App icon</string>
     <string name="desc_splash">TI, DLP, and ISC logo</string>
     <string name="desc_info">Info icon</string>

     <string name="lamp_time">灯稳定时间(ms)</string>
     <string name="scan_mode">手动扫描模式</string>
     <string name="lamp">打开光源</string>
     <string name="pga">设置扫描程序全局区域</string>
     <string name="repeat">连续扫描重复次数</string>
     <string name="scan_method">扫描方法</string>
     <string name="spec_start">光谱起点(nm)</string>
     <string name="spec_end">光谱终点 (nm)</string>
     <string name="scan_width">扫描宽度 (nm)</string>
     <string name="res">D-Res.</string>
     <string name="aver_scan">平均扫描次数(times)</string>
     <string name="ex_time">曝光时间(ms)</string>
     <string name="continuous_scan_mode">连续扫描模式</string>
     <string name="scan_interval_time">扫描间隔时间(ms)</string>
     <string name="set_value">设置所有配置</string>
     <string name="section">Section</string>
     <string name="config_index">配置索引</string>
     <string name="serial_num">配置序列号</string>
     <string name="name">配置名称e</string>
     <string name="scan_repeat">扫描次数</string>
     <string name="total_sections">总扫描部分</string>
     <string name="type">类型(0:Column,1:Hadamard)</string>
     <string name="section_exposure">曝光时间(0-6): 0.635ms</string>
     <string name="scan_width_add">宽度(2-52): 7.02nm</string>
     <string name="reference">替换默认参考</string>
     <string name="license">许可证</string>
     <string name="lock_btn">锁定按钮</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="activation">Activation</string>

    <string-array name="scan_method_array">
         <item>Column</item>
         <item>Hadamard</item>
     </string-array>

     <string-array name="exposure_time">
         <item>0.635</item>
         <item>1.27</item>
         <item>2.54</item>
         <item>5.08</item>
         <item>15.24</item>
         <item>30.48</item>
         <item>60.96</item>
     </string-array>

     <string-array name="scan_width">
         <item>2.34</item>
         <item>3.51</item>
         <item>4.68</item>
         <item>5.85</item>
         <item>7.02</item>
         <item>8.19</item>
         <item>9.36</item>
         <item>10.53</item>
         <item>11.70</item>
         <item>12.87</item>
         <item>14.04</item>
         <item>15.21</item>
         <item>16.38</item>
         <item>17.55</item>
         <item>18.72</item>
         <item>19.89</item>
         <item>21.06</item>
         <item>22.23</item>
         <item>23.40</item>
         <item>24.57</item>
         <item>25.74</item>
         <item>26.91</item>
         <item>28.08</item>
         <item>29.25</item>
         <item>30.42</item>
         <item>31.59</item>
         <item>32.76</item>
         <item>33.93</item>
         <item>35.10</item>
         <item>36.27</item>
         <item>37.44</item>
         <item>38.61</item>
         <item>39.78</item>
         <item>40.95</item>
         <item>42.12</item>
         <item>43.29</item>
         <item>44.46</item>
         <item>45.63</item>
         <item>46.80</item>
         <item>47.97</item>
         <item>49.14</item>
         <item>50.31</item>
         <item>51.48</item>
         <item>52.65</item>
         <item>53.82</item>
         <item>54.99</item>
         <item>56.16</item>
         <item>57.33</item>
         <item>58.50</item>
         <item>59.67</item>
         <item>60.84</item>
     </string-array>
     <string-array name="scan_width_plus">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
         <item>53</item>
         <item>54</item>
         <item>55</item>
         <item>56</item>
         <item>57</item>
         <item>58</item>
         <item>59</item>
         <item>60</item>
         <item>61</item>
    </string-array>
    <string-array name="detail_device_status_items">
        <item>Tiva</item>
        <item>Scanning</item>
        <item>BLE stack</item>
        <item>BLE connection</item>
        <item>Scan Data Interpreting</item>
        <item>Scan Button Pressed</item>
        <item>Battery in charge</item>
    </string-array>

 </resources>
