<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 进度条 -->
        <ProgressBar
            android:id="@+id/pb_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <!-- 设备信息与状态标题 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip16"
            android:layout_marginBottom="@dimen/dip8"
            android:text="设备信息与状态"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <!-- 设备信息部分 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip8"
            android:text="@string/device_information"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_manuf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/manufacturer"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_manuf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_marginStart="@dimen/dip16"
            android:layout_marginEnd="@dimen/dip16"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/ll_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/model"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_marginStart="@dimen/dip16"
            android:layout_marginEnd="@dimen/dip16"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/ll_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/serial"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_marginStart="@dimen/dip16"
            android:layout_marginEnd="@dimen/dip16"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/ll_hw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hw_rev"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_hw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_marginStart="@dimen/dip16"
            android:layout_marginEnd="@dimen/dip16"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/ll_tiva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tiva_rev"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_tiva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- 设备状态部分 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip16"
            android:text="@string/device_status"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_batt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/battery"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_batt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_marginStart="@dimen/dip16"
            android:layout_marginEnd="@dimen/dip16"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/ll_lamptime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lamptime"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_lamptime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_marginStart="@dimen/dip16"
            android:layout_marginEnd="@dimen/dip16"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/ll_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/temperature"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_marginStart="@dimen/dip16"
            android:layout_marginEnd="@dimen/dip16"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/ll_humid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/humidity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_humid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_marginStart="@dimen/dip16"
            android:layout_marginEnd="@dimen/dip16"
            android:background="@color/gray" />

        <!-- 设备状态详情 -->
        <LinearLayout
            android:id="@+id/ll_status_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16"
            android:layout_marginTop="@dimen/dip8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail_device_status"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_device_status"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dip40"
                android:text="@string/click"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_marginStart="@dimen/dip16"
            android:layout_marginEnd="@dimen/dip16"
            android:background="@color/gray" />

        <!-- 错误状态 -->
        <LinearLayout
            android:id="@+id/ll_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/dip40"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dip16"
            android:paddingEnd="@dimen/dip16"
            android:layout_marginTop="@dimen/dip8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/error_status"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_error_status"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dip40"
                android:text="@string/click"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px1"
            android:layout_marginStart="@dimen/dip16"
            android:layout_marginEnd="@dimen/dip16"
            android:background="@color/gray" />

        <!-- 更新阈值按钮 -->
        <Button
            android:id="@+id/btn_update_thresholds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip8"
            android:background="@color/red"
            android:text="@string/update_thresholds"
            android:textColor="@color/white" />

        <!-- 设备状态详情列表（可展开） -->
        <ListView
            android:id="@+id/device_status_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip8"
            android:visibility="gone" />

        <!-- 错误状态列表（可展开） -->
        <LinearLayout
            android:id="@+id/ll_error_status_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip8"
            android:orientation="vertical"
            android:visibility="gone">

            <ListView
                android:id="@+id/error_status_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_clear_error"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dip40"
                android:layout_gravity="end"
                android:text="@string/clear_error" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

